k8s/apps/7-days-to-die/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: vinanrra/7dtd-server:v0.9.3@sha256:48a86a332cd3f1369e171fefe000035af771469f4fd690452ed80bbe8f57f4c4
          ports:
            - containerPort: 26900
            - containerPort: 26900
              protocol: UDP
            - containerPort: 26901
              protocol: UDP
            - containerPort: 26902
              protocol: UDP
            - containerPort: 8082
          volumeMounts:
            - name: server
              mountPath: /home/sdtdserver/serverfiles
            - name: data
              mountPath: /home/sdtdserver/.local/share/7DaysToDie
            - name: logs
              mountPath: /home/sdtdserver/log
            - name: backups
              mountPath: /home/sdtdserver/lgsm/backup
            - name: config
              mountPath: /home/sdtdserver/lgsm/config-lgsm/sdtdserver
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: server
          hostPath:
            path: /mnt/local/7-days-to-die/server
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /mnt/local/7-days-to-die/data
            type: DirectoryOrCreate
        - name: logs
          hostPath:
            path: /mnt/local/7-days-to-die/logs
            type: DirectoryOrCreate
        - name: backups
          hostPath:
            path: /mnt/local/7-days-to-die/backups
            type: DirectoryOrCreate
        - name: config
          configMap:
            name: app-config
      restartPolicy: Always
